--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,5 @@
 .page {
-  width: 1100px;
+  min-width: 1100px;
   max-width: 1600px;
   margin: 0 auto;
   font-family: "Inter", Arial, sans-serif;
