--- a/pages/index.css
+++ b/pages/index.css
@@ -155,7 +155,12 @@
   justify-content: space-between;
 }
 
-.iframe {
+.recipes__iframe {
+  border: none;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
   width: 480px;
   height: 273px;
 }
