--- a/blocks/about.css
+++ b/blocks/about.css
@@ -1,39 +1,63 @@
 .about {
   background-color: #0a2850;
   color: #fff;
+  font-family: "Inter", Arial, sans-serif;
+  padding: 100px 80px 173px;
   display: flex;
   justify-content: space-between;
+  position: relative;
+  overflow: hidden;
+  z-index: 0;
 }
 
 .about__title {
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
-  padding: 100px 80px;
   margin: 0;
   max-width: 251px;
 }
 
 .about__content {
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  padding: 119px 80px 173px;
   max-width: 660px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .about__paragraph {
-  margin: 0 0 20px;
-}
-
-.about__paragraph:last-of-type {
   margin: 0;
+  line-height: 30px;
+  font-size: 20px;
+  font-family: "Noto Serif", "Times New Roman", serif;
 }
 
 .about__circle {
   position: absolute;
+  background-color: #1878dc;
+  border-radius: 50%;
+  width: 426px;
+  height: 426px;
+  top: -152px;
+  left: -129px;
+  z-index: -1;
+}
+
+.about__circle_animation_blurred {
+  animation: pulsate 1.3s ease-in-out 0s infinite;
+}
+
+@keyframes pulsate {
+  0% {
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 0.6;
+  }
+
+  100% {
+    opacity: 0;
+    transform: scale(1.4);
+  }
 }
