--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -44,6 +44,11 @@
   align-items: center;
 }
 
+.footer__social-link:hover {
+  opacity: 70%;
+  transition: 0.5s ease-in-out;
+}
+
 .footer__social-icon {
   width: 16px;
   height: 16px;
