--- a/blocks/header.css
+++ b/blocks/header.css
@@ -2,6 +2,7 @@
   padding: 30px 80px 40px;
   background-color: #fff;
   background-image: url(../images/background_header.svg);
+  background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
