--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -3,6 +3,7 @@
   background-color: #0a2750;
   padding: 100px 80px 215px;
   background-image: url(../images/background_recipes.svg);
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -43,14 +44,12 @@
   line-height: 30px;
   display: flex;
   justify-content: space-between;
+  top: 24px;
+  bottom: 0;
 }
 
 .recipes__iframe {
   border: none;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
   width: 480px;
   height: 273px;
 }
