--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -34,6 +34,7 @@
   gap: 40px;
   list-style-type: none;
   margin: 0;
+  padding-left: 0;
 }
 
 .recipes__video-caption {
@@ -44,8 +45,8 @@
   line-height: 30px;
   display: flex;
   justify-content: space-between;
-  top: 24px;
-  bottom: 0;
+  margin-top: 24px;
+  margin-bottom: 0;
 }
 
 .recipes__iframe {
